# os_cw

./: README.md
allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: allocator_global_heap_tests.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_sorted_list/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
associative_container/search_tree/indexing_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
common/include/: extra_utility.h
common/src/: extra_utility.cpp
dbms/: CMakeLists.txt
dbms/db/: CMakeLists.txt
dbms/db/include/: db.h
dbms/db/src/: db.cpp
dbms/handler/: CMakeLists.txt
dbms/handler/include/: commands_realization.h  file_validation.h  parser_file.h  request_handler.h
dbms/my_type/: CMakeLists.txt
dbms/my_type/include/: custom_data.h
dbms/my_type/src/: custom_data.cpp
flyweight_string/include/: flyweight_pool.h
flyweight_string/src/: flyweight_pool.cpp
flyweight_string_pool/: CMakeLists.txt
flyweight_string_pool/include/: flyweight_pool.h
flyweight_string_pool/src/: flyweight_pool.cpp
logger/: CMakeLists.txt
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp  config.json
logger/logger/: CMakeLists.txt
logger/logger/include/: logger.h
logger/logger/src/: logger.cpp
logger/server_logger/: CMakeLists.txt
